# cmake_cpp_example

./: .gitignore  CMakeLists.txt  README.md  release.nix
a/: main.cpp
a/include/: a.hpp
app/: main.cpp
app2/: CMakeLists.txt  main.cpp
b/: main.cpp
b/include/: b.hpp
c/: main.cpp
c/include/: c.hpp
cmake/: cross.cmake  host.cmake
d/: main.cpp
d/include/: d.hpp
libc/: CMakeLists.txt
libc/include/: cstdio
